# Health-Buddy

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/terrabull/healthbuddy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/terrabull/healthbuddy/: AlarmManager.kt  App.java  App.kt  AudioRecorder.kt  ChatHistoryManager.kt  ChatMessage.kt  GeminiApiWrapper.kt  GoogleTtsPlayer.kt  LlmTools.kt  MainActivity.kt  NotificationWorker.kt  PcmWavRecorder.java  WhisperApi.kt
app/src/main/java/com/terrabull/healthbuddy/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/terrabull/healthbuddy/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
whisperlib/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
whisperlib/src/main/jni/whisper/: CMakeLists.txt  jni.c
whisperlib/src/main/jni/whisper/whisper.cpp/android/: CMakeLists.txt
